--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
     "electron": "electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder -lw",
+    "eject": "react-scripts eject",
     "dev": "concurrently \"BROWSER=none npm run react-start\" \"electron .\""
   },
   "eslintConfig": {
@@ -62,6 +63,7 @@
     "electron-builder": "^23.6.0",
     "postcss": "^8.4.17",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.4.3",
     "tailwindcss": "^3.1.8"
   }
 }
