--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-monaco-editor": "^0.51.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
@@ -62,6 +63,7 @@
     "electron": "^21.0.1",
     "electron-builder": "^23.6.0",
     "framer-motion": "^9.0.2",
+    "monaco-editor-react": "^1.0.2",
     "postcss": "^8.4.17",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.4.3",
