--- a/app/package.json
+++ b/app/package.json
@@ -55,6 +55,8 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.0.0",
+    "@monaco-editor/react": "^4.4.6",
     "@types/react": "^17.0.52",
     "@types/react-dom": "^17.0.18",
     "@types/react-helmet": "^6.1.5",
@@ -63,6 +65,7 @@
     "electron": "^21.0.1",
     "electron-builder": "^23.6.0",
     "framer-motion": "^9.0.2",
+    "monaco-editor": "^0.35.0",
     "monaco-editor-react": "^1.0.2",
     "postcss": "^8.4.17",
     "react-helmet": "^6.1.0",
