--- a/app/package.json
+++ b/app/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "cobra",
-  "version": "0.1.0",
-  "main": "public/electron.js",
   "author": {
-    "name": "lucasrpatten",
-    "email": "lucasrpattendev@gmail.com"
+    "email": "lucasrpattendev@gmail.com",
+    "name": "lucasrpatten"
   },
-  "homepage": "./",
-  "license": "AGNU-3.0",
+  "browserslist": {
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ]
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,23 +25,23 @@
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-monaco-editor": "^0.51.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "react-start": "react-scripts start",
-    "react-build": "react-scripts build",
-    "react-test": "react-scripts test",
-    "prepack": "npm run react-build",
-    "predist": "npm run react-build",
-    "postinstall": "electron-builder install-app-deps",
-    "electron": "electron .",
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder -lw",
-    "eject": "react-scripts eject",
-    "dev": "concurrently \"BROWSER=none npm run react-start\" \"electron .\""
+  "devDependencies": {
+    "@monaco-editor/react": "^4.4.6",
+    "@types/react": "^17.0.52",
+    "@types/react-dom": "^17.0.18",
+    "autoprefixer": "^10.4.12",
+    "concurrently": "^7.4.0",
+    "electron": "^23.0.0",
+    "electron-builder": "^23.6.0",
+    "framer-motion": "^9.0.2",
+    "monaco-editor": "^0.35.0",
+    "postcss": "^8.4.17",
+    "react-router-dom": "^6.4.3",
+    "tailwindcss": "^3.1.8"
   },
   "eslintConfig": {
     "extends": [
@@ -42,34 +49,22 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "homepage": "./",
+  "license": "AGNU-3.0",
+  "main": "public/electron.js",
+  "name": "cobra",
+  "scripts": {
+    "dev": "concurrently \"BROWSER=none npm run react-start\" \"electron .\"",
+    "dist": "electron-builder -lw",
+    "eject": "react-scripts eject",
+    "electron": "electron .",
+    "pack": "electron-builder --dir",
+    "postinstall": "electron-builder install-app-deps",
+    "predist": "npm run react-build",
+    "prepack": "npm run react-build",
+    "react-build": "react-scripts build",
+    "react-start": "react-scripts start",
+    "react-test": "react-scripts test"
   },
-  "devDependencies": {
-    "@craco/craco": "^7.0.0",
-    "@monaco-editor/react": "^4.4.6",
-    "@types/react": "^17.0.52",
-    "@types/react-dom": "^17.0.18",
-    "@types/react-helmet": "^6.1.5",
-    "autoprefixer": "^10.4.12",
-    "concurrently": "^7.4.0",
-    "electron": "^23.0.0",
-    "electron-builder": "^23.6.0",
-    "framer-motion": "^9.0.2",
-    "monaco-editor": "^0.35.0",
-    "monaco-editor-react": "^1.0.2",
-    "postcss": "^8.4.17",
-    "react-helmet": "^6.1.0",
-    "react-router-dom": "^6.4.3",
-    "tailwindcss": "^3.1.8"
-  }
+  "version": "0.1.0"
 }
